fixed width for input into the custom select and fix visible for button scroll to top

--- a/src/pug/comps/scroll-to-page-start/scroll-to-page-start.scss
+++ b/src/pug/comps/scroll-to-page-start/scroll-to-page-start.scss
@@ -37,7 +37,7 @@
 
     &.fixed-position {
         position: absolute;
-        bottom: auto;
+        bottom: 0 !important;
         top: -100px;
     }
 
